--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: python
     buildCommand: pip install -U -r requirements.txt
     startCommand: python3 ser.py & bash start
-    region: Singapore #frankfurt #Singapore
+    region: frankfurt #frankfurt #Singapore
     envVars:
       - key: APP_ID 
         value: 9514755
